--- a/package.json
+++ b/package.json
@@ -74,24 +74,26 @@
     "assert-plus": "^1.0.0",
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.5.1",
-    "chalk": "^2.3.2",
+    "chalk": "^2.4.0",
     "compression": "^1.7.2",
     "email-templates": "^3.5.2",
     "helmet": "^3.12.0",
     "i18next": "^10.6.0",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.5",
-    "moment": "^2.22.0",
-    "mongoose": "^5.0.14",
+    "moment": "^2.22.1",
+    "mongoose": "^5.0.15",
     "mongoose-timestamp": "^0.6.0",
-    "node-devise": "^0.1.2",
+    "node-devise": "^0.1.3",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "restify": "^7.1.0",
+    "restify": "^7.1.1",
+    "restify-cors-middleware": "^1.1.0",
     "restify-errors": "^6.0.0",
     "restify-joi-middleware": "^5.0.0",
     "restify-render-middleware": "^1.0.1",
-    "winston": "^2.4.1"
+    "socket.io": "^2.1.0",
+    "winston": "^2.4.2"
   },
   "pre-commit": [
     "lint",
